Tried to fix lightbox height on mobile

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -3620,6 +3620,9 @@ label {
     }
 
     .lightbox {
+
+        max-height: 85vh;
+
         h3 {
             font-size: 1em;
         }
